--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -152,7 +152,7 @@
   --elixir-list-group-hover-bg: #fafafa;
   --elixir-body-bg: #fff;
   --elixir-body-color: #6a6a6a;
-  --elixir-headings-color: #2A3855;
+  --elixir-headings-color: #3674B5;
   --elixir-link-color: #2A3855;
   --elixir-link-hover-color: #222d44;
   --elixir-border-color: #e1e1e1;
